--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </nav>
     <header class="jumbotron">
       <h1 class="display-3">Armando Herrera Canelon</h1>
-      <p class="lead">Determination, broad thinking and persistence.</p>
+      <p class="lead">Determined, broad-minded and persistent.</p>
     </header>
     <!-- <div class="container" style="margin: 0 auto;"> -->
     <!-- </div> -->
@@ -56,6 +56,18 @@
     <div class ="container" id = "toolsContainer" style="text-align: center;">
     
         <h4>Tools and Programming Languages</h4>
+
+        <div class= "container" id = "insideToolsContainer">
+
+        <img src="https://img.icons8.com/ios/200/000000/html.png">
+        <img src="https://img.icons8.com/ios/200/000000/css.png">
+        <img src="https://img.icons8.com/ios/200/000000/js.png">
+        <img src="https://img.icons8.com/color/200/000000/bootstrap.png">
+        <img src="https://img.icons8.com/color/200/000000/nodejs.png">
+        <br>
+        <a href="https://icons8.com/icon/54087/nodejs"> by Icons8</a>
+
+        </div>
     </div>
 </div>
 </div>
