--- a/portfolio.html
+++ b/portfolio.html
@@ -41,9 +41,9 @@
         <hr>
         <div class="container" id="portfolioContent">
             <div class="row">
-                <div class="col-sm-12 col-md-12 col-lg-3 col-xl-3">
+                <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
 
-                    <div class="card" style="width: 18rem; background-color: #4aaaa5;">
+                    <div class="card" style="width: 25rem; background-color: rgb(216, 144, 10); border: solid  #000;;">
                         <img class="card-img-top" src="asset/ChoiceEats.jpg" alt="Card image cap" id="p1">
                             <div class="card-body">
                               <p class="card-text" style="text-align: center; color: #fff; font-size: 25px;">Choice Eats</p>
@@ -51,7 +51,7 @@
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
-                    <div class="card" style="width: 18rem; background-color: #4aaaa5;">
+                    <div class="card" style="width: 25rem; background-color:rgb(216, 144, 10); border: solid black;">
                             <img class="card-img-top" src="asset/DailyPlanner.jpg" alt="Card image cap" id="p2">
                                 <div class="card-body">
                                   <p class="card-text" style="text-align: center; color: #fff; font-size: 25px;">Daily Planner</p>
@@ -61,7 +61,7 @@
             </div>
             <div class="row">
                     <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
-                        <div class="card" style="width: 18rem; background-color: #4aaaa5;">
+                        <div class="card" style="width: 25rem; background-color: rgb(216, 144, 10); border: solid black;; margin-top: 20px;">
                             <img class="card-img-top" src="asset/WeatherDashboard.jpg" alt="Card image cap" id="p3">
                                 <div class="card-body">
                                   <p class="card-text" style="text-align: center; color: #fff; font-size: 25px;">Weather Dashboard</p>
