Changed profile pic and changed the layout of the page, added hover effect and icons

--- a/portfolio.html
+++ b/portfolio.html
@@ -61,7 +61,7 @@
             </div>
             <div class="row">
                     <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
-                        <div class="card" style="width: 25rem; background-color: rgb(216, 144, 10); border: solid black;; margin-top: 20px;">
+                        <div class="card" style="width: 25rem; background-color: rgb(216, 144, 10); margin-top: 20px;">
                             <img class="card-img-top" src="asset/WeatherDashboard.jpg" alt="Card image cap" id="p3">
                                 <div class="card-body">
                                   <p class="card-text" style="text-align: center; color: #fff; font-size: 25px;">Weather Dashboard</p>
