--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <div class="container" id = "toolsContainer">
         <div class="toolscontent" style="margin-top: 20px;">
             <div class="row">
-                <div class="col-sm-12">
+                <div class="col-sm-12 col-md-12 col-lg-12">
                     <div class="tools-header" style="text-align:center;">
                         <h2>Tools and Programming Languages</h2>
                     </div>
