Adding ne changes

--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="asset/style.css">
 </head>
 <body>
-<div id="mainContainer">
+<div id="mainContainer" style="height: 1200px;">
     <nav id = "navbar" class="navbar navbar-expand-lg navbar-light ">
         <a class="navbar-brand" style = "color: white" href="#">Get to know me | </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -18,20 +18,23 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-item nav-link"  style = "color: white" href="#">Portfolio</a>
-            <a class="nav-item nav-link"  style = "color: white" href="#">Contact</a>
+            <a class="nav-item nav-link"  style = "color: white" href="portfolio.html">Portfolio</a>
+            <a class="nav-item nav-link"  style = "color: white" href="contact.html">Contact</a>
+            <img class="socialMedia" src="https://img.icons8.com/ultraviolet/50/000000/parse-resume.png" style= "margin-left: 500px;;">
+            <img class="socialMedia" src="https://img.icons8.com/color/48/000000/linkedin.png" style="margin-left: 60px;">
+            <img class="socialMedia" src="https://img.icons8.com/nolan/50/github.png" style="margin-left: 60px;">
           </div>
         </div>
     </nav>
-    <header class="jumbotron">
+    <!-- <header class="jumbotron">
       <h1 class="display-3">Armando Herrera Canelon</h1>
       <p class="lead">Determined, broad-minded and persistent.</p>
-    </header>
-    <div class="container" id = "aboutMe">
+    </header> -->
+    <div class="container" id = "aboutMe" style="height: 900px;">
         <div class="about-me-content">
             <div class="row">
                 <div class="col-sm-12">
-                    <div class="about-me-header">
+                    <div class="about-me-header" style="text-align: center;">
                         <h2>Projects</h2>
                     </div>
                 </div>
@@ -43,7 +46,7 @@
             <div class="row">
                 <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
 
-                    <div class="card" style="width: 25rem; background-color: rgb(216, 144, 10); border: solid  #000;;">
+                    <div class="card" style="width: 25rem; background-color: rgb(216, 144, 10); border: solid  white;">
                         <img class="card-img-top" src="asset/ChoiceEats.jpg" alt="Card image cap" id="p1">
                             <div class="card-body">
                               <p class="card-text" style="text-align: center; color: #fff; font-size: 25px;">Choice Eats</p>
@@ -51,7 +54,7 @@
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
-                    <div class="card" style="width: 25rem; background-color:rgb(216, 144, 10); border: solid black;">
+                    <div class="card" style="width: 25rem; background-color:rgb(216, 144, 10); border: solid white">
                             <img class="card-img-top" src="asset/DailyPlanner.jpg" alt="Card image cap" id="p2">
                                 <div class="card-body">
                                   <p class="card-text" style="text-align: center; color: #fff; font-size: 25px;">Daily Planner</p>
@@ -61,7 +64,7 @@
             </div>
             <div class="row">
                     <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
-                        <div class="card" style="width: 25rem; background-color: rgb(216, 144, 10); margin-top: 20px;">
+                        <div class="card" style="width: 25rem; background-color: rgb(216, 144, 10); margin-top: 20px; border: solid white;">
                             <img class="card-img-top" src="asset/WeatherDashboard.jpg" alt="Card image cap" id="p3">
                                 <div class="card-body">
                                   <p class="card-text" style="text-align: center; color: #fff; font-size: 25px;">Weather Dashboard</p>
