--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
             </div>              
         </div>
-        <hr style="width: 800px;">
+        <!-- <hr style="width: 800px;"> -->
 
         <div class= "container" id = "insideToolsContainer">
 
@@ -84,15 +84,11 @@
     </div>
 
     <!-- <div class ="container" id = "toolsContainer">
-
         <div class= "container" style="margin-top: 30px;"> 
     
             <h4 style="margin-top: 30px;">Tools and Programming Languages</h4>
-
         </div> 
-
         <div class= "container" id = "insideToolsContainer">
-
             <img class="icons" src="https://img.icons8.com/ios/200/000000/html.png">
             <img class="icons" src="https://img.icons8.com/ios/200/000000/css.png">
             <img class="icons" src="https://img.icons8.com/ios/200/000000/js.png">
@@ -100,7 +96,6 @@
             <img class="icons" src="https://img.icons8.com/color/200/000000/nodejs.png">
             <br>
             <a href="https://icons8.com/icon/54087/nodejs"> by Icons8</a>
-
         </div>
     </div> -->
 </div>
@@ -118,3 +113,4 @@
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script src="asset/script.js"></script>
 </html>
+
