Deleted hr line

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
             </div>              
         </div>
-        <hr style="width: 800px;">
+        <!-- <hr style="width: 800px;"> -->
         <div class="container" id="bio">
             <div class="row">
                 <div class="col-sm-12 col-md-12 col-lg-12 col-xl-3">
