--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 <body>
 <div id="mainContainer">
     <nav id = "navbar" class="navbar navbar-expand-lg navbar-light ">
-        <a class="navbar-brand" style = "color: white" href="#">Get to know me | </a>
+        <a class="navbar-brand" style = "color: white" href="index.html">Get to know me | </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-item nav-link"  style = "color: white; margin-right: 20px;" href="#">PORTFOLIO</a>
-            <a class="nav-item nav-link"  style = "color: white" href="#">CONTACT</a>
+            <a class="nav-item nav-link"  style = "color: white; margin-right: 20px;" href="portfolio.html">PORTFOLIO</a>
+            <a class="nav-item nav-link"  style = "color: white" href="contact.html">CONTACT</a>
             <img class="socialMedia" src="https://img.icons8.com/ultraviolet/50/000000/parse-resume.png" style= "margin-left: 500px;;">
             <img class="socialMedia" src="https://img.icons8.com/color/48/000000/linkedin.png" style="margin-left: 60px;">
             <img class="socialMedia" src="https://img.icons8.com/nolan/50/github.png" style="margin-left: 60px;">
