--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
 <body>
 <div id="mainContainer" style="height: 1200px;">
     <nav id = "navbar" class="navbar navbar-expand-lg navbar-light ">
-        <a class="navbar-brand" style = "color: white" href="#">Get to know me | </a>
+        <a class="navbar-brand" style = "color: white" href="index.html">Get to know me | </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
