Added links to all social media and CV

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="asset/style.css">
 </head>
 <body>
-<div id="mainContainer">
+<div id="mainContainer"> 
     <nav id = "navbar" class="navbar navbar-expand-lg navbar-light ">
         <a class="navbar-brand" style = "color: white" href="index.html">Get to know me | </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -20,13 +20,20 @@
           <div class="navbar-nav">
             <a class="nav-item nav-link"  style = "color: white; margin-right: 20px;" href="portfolio.html">PORTFOLIO</a>
             <a class="nav-item nav-link"  style = "color: white" href="contact.html">CONTACT</a>
-            <img class="socialMedia" src="https://img.icons8.com/ultraviolet/50/000000/parse-resume.png" style= "margin-left: 500px;;">
-            <img class="socialMedia" src="https://img.icons8.com/color/48/000000/linkedin.png" style="margin-left: 60px;">
-            <img class="socialMedia" src="https://img.icons8.com/nolan/50/github.png" style="margin-left: 60px;">
+            <a href="asset/CV - Armando Herrera Canelon_190624.pdf">
+                <img src="./asset/resumeIcon.png" style= "margin-left: 500px;"alt="linkedIn">
+            </a>
+            <!-- <img class="socialMedia" src="./asset/resumeIcon.png" style= "margin-left: 500px;">  -->
+            <a href="https://www.linkedin.com/in/armandoherreracanelon/">
+                <img src="./asset/linkedinIcon.png" style="margin-left: 60px;" alt="linkedIn">
+            </a>
+            <a href="https://github.com/armandojhc">
+                <img src="./asset/githubIcon.png"  style="margin-left: 60px;" alt="linkedIn">
+            </a>
           </div>
         </div>
-        
     </nav>
+
     <header class="jumbotron">
       <h1 class="display-3">AHC</h1>
       <p class="lead">BROAD-MINDED | DETERMINED | PERSISTENT</p>
