Improved responsiveness and improved contact page

--- a/index.html
+++ b/index.html
@@ -21,14 +21,13 @@
             <a class="nav-item nav-link"  style = "color: white; margin-right: 20px;" href="portfolio.html">PORTFOLIO</a>
             <a class="nav-item nav-link"  style = "color: white" href="contact.html">CONTACT</a>
             <a href="asset/CV - Armando Herrera Canelon_190624.pdf">
-                <img src="./asset/resumeIcon.png" style= "margin-left: 500px;"alt="linkedIn">
+                <img src="./asset/resumeIcon.png" id="resumeIcon" alt="resume">
             </a>
-            <!-- <img class="socialMedia" src="./asset/resumeIcon.png" style= "margin-left: 500px;">  -->
             <a href="https://www.linkedin.com/in/armandoherreracanelon/">
                 <img src="./asset/linkedinIcon.png" style="margin-left: 60px;" alt="linkedIn">
             </a>
             <a href="https://github.com/armandojhc">
-                <img src="./asset/githubIcon.png"  style="margin-left: 60px;" alt="linkedIn">
+                <img src="./asset/githubIcon.png"  style="margin-left: 60px;" alt="github">
             </a>
           </div>
         </div>
@@ -70,7 +69,7 @@
                                 <h2>Tools and Programming Languages</h2>
                             </div>
                         </div>
-                    <div class="row" style="padding:30px; width: 100%;">
+                    <div id="tools" class="row" style="padding:30px; width: 100%;">
                         <img class="icons" src="https://img.icons8.com/ios/200/000000/html.png">
                         <img class="icons" src="https://img.icons8.com/ios/200/000000/css.png">
                         <img class="icons" src="https://img.icons8.com/ios/200/000000/js.png">
