--- a/portfolio.html
+++ b/portfolio.html
@@ -17,19 +17,21 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <a class="nav-item nav-link"  style = "color: white" href="portfolio.html">Portfolio</a>
-            <a class="nav-item nav-link"  style = "color: white" href="contact.html">Contact</a>
-            <img class="socialMedia" src="https://img.icons8.com/ultraviolet/50/000000/parse-resume.png" style= "margin-left: 500px;;">
-            <img class="socialMedia" src="https://img.icons8.com/color/48/000000/linkedin.png" style="margin-left: 60px;">
-            <img class="socialMedia" src="https://img.icons8.com/nolan/50/github.png" style="margin-left: 60px;">
+            <div class="navbar-nav">
+              <a class="nav-item nav-link"  style = "color: white; margin-right: 20px;" href="portfolio.html">PORTFOLIO</a>
+              <a class="nav-item nav-link"  style = "color: white" href="contact.html">CONTACT</a>
+              <a href="asset/CV - Armando Herrera Canelon_190624.pdf">
+                  <img src="./asset/resumeIcon.png" id="resumeIcon" alt="resume">
+              </a>
+              <a href="https://www.linkedin.com/in/armandoherreracanelon/">
+                  <img src="./asset/linkedinIcon.png" style="margin-left: 60px;" alt="linkedIn">
+              </a>
+              <a href="https://github.com/armandojhc">
+                  <img src="./asset/githubIcon.png"  style="margin-left: 60px;" alt="github">
+              </a>
+            </div>
           </div>
-        </div>
     </nav>
-    <!-- <header class="jumbotron">
-      <h1 class="display-3">Armando Herrera Canelon</h1>
-      <p class="lead">Determined, broad-minded and persistent.</p>
-    </header> -->
     <div class="container" id = "aboutMe" style="height: 900px;">
         <div class="about-me-content">
             <div class="row">
