--- a/contact.html
+++ b/contact.html
@@ -1,30 +1,39 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Contact Page</title>
+    <title>About Me Page</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="Assets/CSS/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="asset/style.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light">
-    <a class="navbar-brand" id="navbarbrand" href="index.html">Armando Herrera Canelon</a>
-    <ul class="nav ml-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="index.html"> About | <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="portfolio.html">Portfolio</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="contact.html">| Contact</a>
-        </li>
-        
-      </ul>
-  </nav>
-    <div class="container">
+<div id="mainContainer" style="height: 1000px;"> 
+    <nav id = "navbar" class="navbar navbar-expand-lg navbar-light ">
+        <a class="navbar-brand" style = "color: white" href="index.html">Get to know me | </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-item nav-link"  style = "color: white; margin-right: 20px;" href="portfolio.html">PORTFOLIO</a>
+            <a class="nav-item nav-link"  style = "color: white" href="contact.html">CONTACT</a>
+            <a href="asset/CV - Armando Herrera Canelon_190624.pdf">
+                <img src="./asset/resumeIcon.png" id="resumeIcon" alt="resume">
+            </a>
+            <a href="https://www.linkedin.com/in/armandoherreracanelon/">
+                <img src="./asset/linkedinIcon.png" style="margin-left: 60px;" alt="linkedIn">
+            </a>
+            <a href="https://github.com/armandojhc">
+                <img src="./asset/githubIcon.png"  style="margin-left: 60px;" alt="github">
+            </a>
+          </div>
+        </div>
+    </nav>
+    <div class="container" style="background: white;">
         <div class="contact-header">
                     <div class="row">
                         <div class="col-sm-12">
@@ -40,7 +49,7 @@
 
         <div class="row" style="margin-bottom: 100px;">
             <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
-                <form>
+                <form style="margin-bottom: 20px;">
                     <div class="form-group">
                         <label for="formGroupExampleInput">Name</label>
                             <input type="text" class="form-control" id="formGroupExampleInput" placeholder="John Doe">
@@ -60,13 +69,18 @@
     </div>
 
 
-    </div>
+</div>
 
-    <footer id="footer">
-        <p id="copyright"style="text-align: center";>Armando Herrera Canelon <br>
-            Copyright &copy; 2019 </p>
+   <footer id="footer">
+    <p id="copyright" style="text-align: center;">Armando Herrera Canelon <br>
+        Copyright &copy; 2020</p>
+
     </footer>
-
-
+    
 </body>
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+<script src="asset/script.js"></script>
 </html>
