Added links to my live projects in the portfolio page

--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
           </div>
         </div>
     </nav>
-    <div class="container" style="background: white;">
+    <div class="container" id="contactContainer">
         <div class="contact-header">
                     <div class="row">
                         <div class="col-sm-12">
