--- a/portfolio.html
+++ b/portfolio.html
@@ -47,31 +47,36 @@
         <div class="container" id="portfolioContent">
             <div class="row">
                 <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
-
+                    <a href="https://armandojhc.github.io/project1-SafeEats/">
                     <div class="card" style="width: 25rem; background-color: rgb(216, 144, 10); border: solid  white;">
                         <img class="card-img-top" src="asset/ChoiceEats.jpg" alt="Card image cap" id="p1">
                             <div class="card-body">
                               <p class="card-text" style="text-align: center; color: #fff; font-size: 25px;">Choice Eats</p>
                             </div>
                     </div>
+                    </a>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
+                    <a href="https://armandojhc.github.io/day-planner-/">
                     <div class="card" style="width: 25rem; background-color:rgb(216, 144, 10); border: solid white">
                             <img class="card-img-top" src="asset/DailyPlanner.jpg" alt="Card image cap" id="p2">
                                 <div class="card-body">
                                   <p class="card-text" style="text-align: center; color: #fff; font-size: 25px;">Daily Planner</p>
                                 </div>
                     </div>
+                    </a>
                 </div>
             </div>
             <div class="row">
                     <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
+                        <a href="https://armandojhc.github.io/weather-dashboard-/">
                         <div class="card" style="width: 25rem; background-color: rgb(216, 144, 10); margin-top: 20px; border: solid white;">
                             <img class="card-img-top" src="asset/WeatherDashboard.jpg" alt="Card image cap" id="p3">
                                 <div class="card-body">
                                   <p class="card-text" style="text-align: center; color: #fff; font-size: 25px;">Weather Dashboard</p>
                                 </div>
                         </div>
+                        </a>
                     </div>
             </div>
         </div>
